# colorgrad-js

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bootstrap.js  index.html  index_js.bootstrap.js  package.json  test.js  utils.js
.github/workflows/: ci.yml
examples/: bench.js  demo.js  package.json
pkg/: package.json
src/: lib.rs
web/: README.md  index.html  index.js  package.json  style.css  webpack.config.js
